--- a/Fitgoal/Base.lproj/Main.storyboard
+++ b/Fitgoal/Base.lproj/Main.storyboard
@@ -114,13 +114,19 @@
                     <view key="view" contentMode="scaleToFill" id="ox0-co-3On">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="screenBackgroundPartial4" translatesAutoresizingMaskIntoConstraints="NO" id="a8H-tl-Xqx">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="rG6-6T-iKc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fan-qB-ZyU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2278" y="254"/>
+            <point key="canvasLocation" x="2275.36231884058" y="253.79464285714283"/>
         </scene>
     </scenes>
     <resources>
@@ -129,6 +135,7 @@
         <image name="brandLogoTypeWhite" width="103" height="42"/>
         <image name="lifeImage" width="376" height="377"/>
         <image name="screenBackgroundFull1" width="378" height="814"/>
+        <image name="screenBackgroundPartial4" width="375" height="812"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
