--- a/Fitgoal/Views/Flows/Onboarding/ContentView.xib
+++ b/Fitgoal/Views/Flows/Onboarding/ContentView.xib
@@ -15,14 +15,21 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContentView" customModule="Fitgoal" customModuleProvider="target">
+            <connections>
+                <outlet property="containerView" destination="iN0-l3-epB" id="KEA-Lu-VRW"/>
+                <outlet property="descriptionLable" destination="1Bn-1h-meI" id="CF6-qR-sGw"/>
+                <outlet property="extrasLable" destination="pQP-ya-b5h" id="Glm-jB-a6p"/>
+                <outlet property="titleLable" destination="Jbb-RS-4xd" id="hdi-6V-QvD"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContentView" customModule="Fitgoal" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="274" height="176"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
+            <rect key="frame" x="0.0" y="0.0" width="274" height="226"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TRANSFORM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jbb-RS-4xd">
-                    <rect key="frame" x="0.0" y="8" width="233.5" height="49"/>
+                    <rect key="frame" x="0.0" y="57" width="233.5" height="49"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="eB3-YP-5iC"/>
                     </constraints>
@@ -30,14 +37,8 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your life" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQP-ya-b5h">
-                    <rect key="frame" x="0.0" y="65" width="124" height="42"/>
-                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="35"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Bn-1h-meI">
-                    <rect key="frame" x="0.0" y="115" width="272" height="61"/>
+                    <rect key="frame" x="0.0" y="164" width="272" height="61"/>
                     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="61" id="AiV-iu-qGx"/>
@@ -62,24 +63,32 @@
                     </attributedString>
                     <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brandLogoSign" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-xn-nj4">
+                    <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Your life" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQP-ya-b5h">
+                    <rect key="frame" x="0.0" y="114" width="124" height="42"/>
+                    <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="35"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="1Bn-1h-meI" firstAttribute="top" secondItem="pQP-ya-b5h" secondAttribute="bottom" constant="8" id="7IX-jI-rhd"/>
-                <constraint firstItem="Jbb-RS-4xd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="DYf-R2-V3I"/>
-                <constraint firstItem="pQP-ya-b5h" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="I7S-fE-raT"/>
                 <constraint firstItem="pQP-ya-b5h" firstAttribute="top" secondItem="Jbb-RS-4xd" secondAttribute="bottom" constant="8" id="MeI-sz-NPb"/>
-                <constraint firstItem="1Bn-1h-meI" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="XPI-5V-YiD"/>
-                <constraint firstItem="Jbb-RS-4xd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="qc3-mM-87j"/>
+                <constraint firstItem="mdz-xn-nj4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="NFn-el-vqY"/>
+                <constraint firstItem="Jbb-RS-4xd" firstAttribute="top" secondItem="mdz-xn-nj4" secondAttribute="bottom" constant="21" id="OyS-w7-pGi"/>
+                <constraint firstItem="1Bn-1h-meI" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="QdJ-u8-bV6"/>
+                <constraint firstItem="Jbb-RS-4xd" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="cSC-oL-0ya"/>
+                <constraint firstItem="mdz-xn-nj4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xol-mA-cSh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="descriptionLable" destination="1Bn-1h-meI" id="TTw-jg-wid"/>
-                <outlet property="extrasLable" destination="pQP-ya-b5h" id="1Uk-G6-6yE"/>
-                <outlet property="titleLable" destination="Jbb-RS-4xd" id="gBi-Pp-9QP"/>
-            </connections>
             <point key="canvasLocation" x="24.637681159420293" y="41.517857142857139"/>
         </view>
     </objects>
+    <resources>
+        <image name="brandLogoSign" width="36" height="36"/>
+    </resources>
 </document>
