--- a/Fitgoal/Views/Flows/Onboarding/ContentView.xib
+++ b/Fitgoal/Views/Flows/Onboarding/ContentView.xib
@@ -15,16 +15,9 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ContentView" customModule="Fitgoal" customModuleProvider="target">
-            <connections>
-                <outlet property="containerView" destination="iN0-l3-epB" id="KEA-Lu-VRW"/>
-                <outlet property="descriptionLable" destination="1Bn-1h-meI" id="CF6-qR-sGw"/>
-                <outlet property="extrasLable" destination="pQP-ya-b5h" id="Glm-jB-a6p"/>
-                <outlet property="titleLable" destination="Jbb-RS-4xd" id="hdi-6V-QvD"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ContentView" customModule="Fitgoal" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="274" height="226"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -66,7 +59,7 @@
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brandLogoSign" translatesAutoresizingMaskIntoConstraints="NO" id="mdz-xn-nj4">
                     <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Your life" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQP-ya-b5h">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your life" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pQP-ya-b5h">
                     <rect key="frame" x="0.0" y="114" width="124" height="42"/>
                     <fontDescription key="fontDescription" name="Roboto-Light" family="Roboto" pointSize="35"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -76,7 +69,9 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="pQP-ya-b5h" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="1tv-1A-NCZ"/>
                 <constraint firstItem="1Bn-1h-meI" firstAttribute="top" secondItem="pQP-ya-b5h" secondAttribute="bottom" constant="8" id="7IX-jI-rhd"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1Bn-1h-meI" secondAttribute="trailing" id="Ld9-cU-xOP"/>
                 <constraint firstItem="pQP-ya-b5h" firstAttribute="top" secondItem="Jbb-RS-4xd" secondAttribute="bottom" constant="8" id="MeI-sz-NPb"/>
                 <constraint firstItem="mdz-xn-nj4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="NFn-el-vqY"/>
                 <constraint firstItem="Jbb-RS-4xd" firstAttribute="top" secondItem="mdz-xn-nj4" secondAttribute="bottom" constant="21" id="OyS-w7-pGi"/>
@@ -85,6 +80,11 @@
                 <constraint firstItem="mdz-xn-nj4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xol-mA-cSh"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="descriptionLable" destination="1Bn-1h-meI" id="a8O-pV-4f2"/>
+                <outlet property="extrasLable" destination="pQP-ya-b5h" id="exk-wJ-KG1"/>
+                <outlet property="titleLable" destination="Jbb-RS-4xd" id="beS-4C-dFt"/>
+            </connections>
             <point key="canvasLocation" x="24.637681159420293" y="41.517857142857139"/>
         </view>
     </objects>
